# rodrigo_cabrera_castaldoni_pacote

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: CD.yml  CI.yml  test_workflow.yml
src/rodrigo_ml_communication/: __init__.py
src/rodrigo_ml_communication/storage/: __init__.py  data.py  model.py
tests/: test-requirements.txt
tests/storage/: test_model.py
